--- a/build.yaml
+++ b/build.yaml
@@ -18,3 +18,10 @@
 #     artifact-name: corne_left_with_studio
 #
 ---
+include:
+  - board: nice_nano_v2
+    shield: corne_hw_left
+    cmake-args: -DSHIELD_ROOT=$GITHUB_WORKSPACE
+  - board: nice_nano_v2
+    shield: corne_hw_right
+    cmake-args: -DSHIELD_ROOT=$GITHUB_WORKSPACE
